# master-dissertation

./: README.md
.github/workflows/: main.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: auth.rs  files.rs  main.rs  settings.rs
backend/src/api/: asset_api.rs  common.rs  mod.rs  page_api.rs  user_api.rs
backend/src/models/: asset_model.rs  common.rs  mod.rs  page_model.rs  user_model.rs
backend/src/repositories/: asset_repository.rs  mod.rs  mongo_repository.rs  page_repository.rs  user_repository.rs
dissertation_paper/: dissertation.md
docker/: docker-compose.dev.yml  docker-compose.yml
docker/nginx/: default.conf
front/: .prettierrc.yaml  Dockerfile  Page.json  TODO.md  architecture.md  package.json  tsconfig.json
front/nginx/: nginx.conf
front/public/: index.html
front/src/: App.tsx  globalStyles.ts  index.tsx
front/src/auth/: hooks.ts  state.ts
front/src/blocks/: Root.tsx  index.ts
front/src/common/: ErrorBoundary.tsx  Modal.tsx  RecoilExporter.tsx  helpers.ts  hooks.ts  request.ts
front/src/editor/: hooks.tsx  index.tsx  state.ts
front/src/media/: CreateMedia.tsx  DeleteMedia.tsx  Media.tsx  MediaCard.tsx  MediaModal.tsx  MediaProvider.tsx  hooks.tsx  state.tsx
front/src/pages/: Page.tsx  Public.tsx  hooks.tsx  state.ts
front/src/render/: index.tsx
test/: .gitignore  Dockerfile  Dockerfile.seed  cypress.config.ts  docker-compose.yaml  package.json  test.sh  tsconfig.json
test/cypress/e2e/: editor.cy.ts  login.cy.ts  media.cy.ts  pages.cy.ts
test/cypress/support/: commands.ts  e2e.ts  index.ts
(+84 files in other folders)
